...
    private struct Constants {
        static let cityLabelFont: CGFloat = 14
        static let cityLabelColor: UIColor = .black
        static let defaultValue: Double = 0.0
        static let locationImage: UIImage = UIImage(systemName: "location.fill") ?? UIImage()
        static let searchImage: UIImage = UIImage(systemName: "magnifyingglass") ?? UIImage()
        static let searchFieldPlaceholder = "Search by postcode"
    }
    
    private lazy var locationButton: UIButton = {
        let button = UIButton(type: .system)
        button.contentMode = .scaleAspectFill
        button.translatesAutoresizingMaskIntoConstraints = false
...
