...
    }
    
    // MARK: — Internal Properties
    internal lazy var restaurantLogoImage: UIImageView = {
        let imageView = UIImageView()
        imageView.accessibilityIdentifier = "restaurantLogoImage"
        imageView.accessibilityLabel = "Restaurant logo"
        imageView.translatesAutoresizingMaskIntoConstraints = false
        imageView.image = Constants.restaurantDefaultLogo
        imageView.tintColor = .gray
        return imageView
    }()
    
...
